--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+#DB_CONNECTION=sqlite
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=C:\Users\ewert\Projetos\helDesk\database\database.sqlite
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
