--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
-        "autoprefixer": "^10.2.4",
+        "autoprefixer": "^10.2.6",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.2.4",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "laravel-mix": "^6.0.19",
+        "lodash": "^4.17.21",
+        "postcss": "^8.3.0",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.34.1",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.0.2",
+        "webpack": "^5.38.1"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3"
     }
 }
