--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
         "DB_DATABASE": "database/database.sqlite",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "FILESYSTEM_DRIVE": "public",
+        "LOG_LEVEL": "debug",
+        "MIX_PUSHER_APP_KEY": "${PUSHER_APP_KEY}",
+        "MIX_PUSHER_APP_CLUSTER": "${PUSHER_APP_CLUSTER}"
     }
 }
